# astray

./: .asm-lsp.toml  .clang-format  .clangd  .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  DOCS.md  Makefile  README.md  requirements.txt
app/: CMakeLists.txt
app/src/: main.c
astrayos/: CMakeLists.txt
astrayos/core/: CMakeLists.txt  isr_handler.s  startup.s
astrayos/core/inc/: exception.h
astrayos/inc/: CMakeLists.txt
astrayos/kernel/: CMakeLists.txt  astrayos.c  sched.c  task.c
astrayos/kernel/inc/: astrayos.h  list.h  sched.h
astrayos/ld/: linker_script.ld
astrayos/src/: CMakeLists.txt  astrayos.c  main.c
core/: CMakeLists.txt  core.h  core_periphs.h  exception.h  startup.s  sys.s
inc/: CMakeLists.txt  astrayos.h  list.h  task.h
ld/: linker_script.ld
src/: CMakeLists.txt  astrayos.c  list.c  startup.S  startup.s  task.c
